@@ -107,8 +107,6 @@ Attributes
 
     o   Allow sourceCpp to build an entire directory
 
-    o   Functions with void return should return invisibly
-
 Testing
 
     o	all r* functions : rnorm, etc ...
